--- a/ExpenseTrackerProject/Views/Expense/InsertExpense.cshtml
+++ b/ExpenseTrackerProject/Views/Expense/InsertExpense.cshtml
@@ -2,20 +2,19 @@
 
 <h2>Create a New Expense</h2>
 
-<div style="display: block">
-    <a href="/Expense/InsertExpense/">Create a New Expense</a>
-</div>
+
 
 @using (Html.BeginForm("InsertExpenseToDatabase", "Expense", "Post"))
 {
     <input asp-for="Expense_ID" type="hidden" value="" />
 
     <label asp-for="Category_name" class="control-label">Category_name</label>
-    <input type="text" name="Name" class="form-control" value="" />
+    <input type="text" name="Category_name" class="form-control" value="" />
 
     <label asp-for="Amount" class="control-label">Amount</label>
-    <input type="number" step="0.01" name="Price" class="form-control" />
+    <input type="number" step="0.01" name="Amount" class="form-control" />
 
+    <input type="submit" value="Create Expense" class="btn btn-primary" />
    
 }
 
