--- a/ExpenseTrackerProject/Views/Expense/UpdateExpense.cshtml
+++ b/ExpenseTrackerProject/Views/Expense/UpdateExpense.cshtml
@@ -4,10 +4,10 @@
 
 @using (Html.BeginForm("UpdateExpenseToDatabase", "Expense", "Post"))
     {
-    <input asp-for="Category_name" type="hidden" value="@Model.Category_name" />
+    <input asp-for="Expense_ID" type="hidden" value="@Model.Expense_ID" />
 
     <label asp-for="Category_name" class="control-label">Name</label>
-    <input type="text" name="Name" class="form-control" value="@Model.Category_name" />
+    <input type="text" name="Category_name" class="form-control" value="@Model.Category_name" />
 
     <label asp-for="Amount" class="control-label">Amount</label>
     <input type="number" step="0.01" name="Amount" class="form-control" value="@Model.Amount" />
