--- a/ExpenseTrackerProject/Views/Expense/InsertExpense.cshtml
+++ b/ExpenseTrackerProject/Views/Expense/InsertExpense.cshtml
@@ -14,7 +14,16 @@
     <label asp-for="Amount" class="control-label">Amount</label>
     <input type="number" step="0.01" name="Amount" class="form-control" />
 
+    <label asp-for="Date_Of_Expense" class="control-label">Date Of Expense</label>
+    <input type="date" step="0.01" name="Date_Of_Expense" class="form-control" value="@Model.Date_Of_Expense" />
+
+    <label asp-for="Description" class="control-label">Description</label>
+    <input type="text" name="Description" class="form-control" value="@Model.Description" />
+
+    <label asp-for="Payment_Method" class="control-label">Payment Method</label>
+    <input type="text" name="Payment_Method" class="form-control" value="@Model.Payment_Method" />
+
     <input type="submit" value="Create Expense" class="btn btn-primary" />
-   
+
 }
 
